osg/test.css
/* ... */
header.info .title {
    font-weight: 700;
    color: var(--font-color,var(--gray-dark,#262626));
    grid-area: title;
    display: grid;
    font-size: 2rem;
    align-content: center;
    line-height: 1.25;
    margin: 0 0 .5rem
}

header.info .emoji {
    grid-area: emoji;
    display: grid;
    justify-items: end;
    align-content: center;
    font-family: whirlybats;
    font-weight: 400;
    font-style: normal;
    font-feature-settings: 'liga';
    white-space: nowrap;
    word-wrap: normal;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    font-size: 65px;
    box-sizing: border-box;
    height: 100%;
    width: 100%
}

header.info .logo {
    margin: 0;
    border-radius: .25rem;
    grid-area: logo;
    display: grid;
    width: 100%;
    height: 100%;
    max-width: 100px;
    max-height: 6rem;
    justify-items: end;
    align-content: center
}

header.info .characters img {
    margin-left: .5rem;
    display: inline;
    height: 2.5rem;
    float: right
}

header.info .characters img:hover {
    border: 1px solid var(--highlight,rgb(51, 65, 85))
}

header.info .date {
    font-size: .875rem;
    line-height: 1.25rem;
    font-weight: 500;
    color: var(--highlight,rgb(51, 65, 85));
    grid-area: date;
    margin: 0
}

header.info .meta {
    display: grid;
    grid-area: meta;
    grid-template-columns: min-content auto;
    grid-auto-flow: column;
    grid-auto-rows: minmax(min-content,max-content);
    grid-template-areas: "icon headcrumbs" "icon category"
}

header.info .icon {
    font-family: emoji!important;
    color: var(--highlight,rgb(51, 65, 85));
    border-radius: .25rem;
    display: grid;
    grid-area: icon;
    max-width: min-content;
    justify-content: start;
    align-content: center;
    margin-right: .5rem;
    font-size: 2rem
}

header.info .headcrumbs {
    font-size: .875rem;
    line-height: 1.25rem;
    display: grid;
    grid-area: headcrumbs;
    align-content: end
}

header.info .headcrumbs .hidden {
    display: none
}

header.info .headcrumbs nav {
    margin-top: 0;
    margin-bottom: 0
}

header.info .headcrumbs li {
    margin: 0;
    padding: 0;
    display: inline;
    list-style: none
}

header.info .headcrumbs li+:after {
    color: var(--highlight,rgb(51, 65, 85));
    padding: 0 .25rem 0 .15rem;
    content: "/"
}

header.info .headcrumbs ul {
    margin: 0;
    padding: 0
}

header.info .headcrumbs a {
    color: rgb(51, 65, 85)
}

header.info .headcrumbs .seperator {
    display: inline;
    padding-left: .25rem;
    padding-right: .15rem
}

.article-category {
    font-size: .875rem;
    line-height: 1.25rem;
    color: rgb(51, 65, 85);
    font-style: italic;
    grid-area: category;
    text-transform: capitalize
}

.slink {
    border-radius: .25rem;
    padding: 2.5px
}

.slink.dispute {
    background-color: transparent;
    background-size: 5px 5px;
    background-image: repeating-linear-gradient(135deg,var(--color-one) 0,var(--color-one) 1px,var(--color-two) 0,var(--color-two) 50%);
}

.headcrumbs a {
    color: rgb(51, 65, 85)
}

.page a {
    color: var(--highlight);
}

a {
    color: var(--highlight);
    text-decoration: none
}

a:hover {
    text-decoration: underline;
}

main img {
    padding: .5rem;
    background-color: var(--highlight-background);
    box-sizing: border-box;
}

img {
    margin-top: 1rem;
    margin-bottom: 1rem;
    border-radius: .25rem;
    display: block;
    max-width: 100%;
    padding: 0
}

table {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
    border-radius: .25rem;
    border: 1px solid var(--highlight,rgb(51, 65, 85));
    font-size: .875rem;
    line-height: 1.25rem;
    width: 100%;
    border-spacing: 0;
    table-layout: auto
}

@media screen and (max-width: 640px) {
    table {
        overflow-x:auto
    }
}

table tr:nth-child(even) {
    background-color: var(--highlight-background,var(--gray-light))
}

table td,table th {
    padding-left: .75rem;
    padding-right: .75rem;
    padding-top: .5rem;
    padding-bottom: .5rem;
    border: 1px solid var(--highlight-background);
    border-radius: 0;
    width: auto;
    word-wrap: break-word;
    white-space: normal
}

table td:first-child,table th:first-child {
    border-left-width: 1px
}

table td:last-child,table th:last-child {
    border-right-width: 1px
}

table thead tr:first-child th:first-child {
    border-top-left-radius: .25rem
}

table thead tr:first-child th:last-child {
    border-top-right-radius: .25rem
}

table tbody:first-child tr:first-child td:first-child {
    border-top-left-radius: .25rem
}

table tbody:first-child tr:first-child td:last-child {
    border-top-right-radius: .25rem
}

table tbody:last-child tr:last-child td:first-child {
    border-bottom-left-radius: .25rem
}

table tbody:last-child tr:last-child td:last-child {
    border-bottom-right-radius: .25rem
}

table.infobox {
    font-size: .875rem;
    line-height: 1.25rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding: .5rem;
    float: right;
    border: 1px solid var(--highlight)
}

table.infobox tr,table.infobox td,table.infobox th {
    background: 0 0;
    border: none;
    padding: .1rem 0
}

table.infobox img {
    margin: 0 auto
}

article blockquote {
    padding-left: 1rem;
    padding-right: 1rem;
    margin-top: 1rem;
    margin-bottom: 1rem;
    margin-left: 0;
    margin-right: 0;
    border-left: 2px solid var(--highlight);
    border-inline-start:2px solid var(--color-gray);font-style: italic
}

.note {
    font-size: 1rem;
    line-height: 1.5rem;
    padding: 1rem;
    border-radius: .25rem;
    background: #F8F9FA;
    border: none;
    font-style: normal
}

.note.advice {
    padding: .5rem;
    margin-top: 0;
    margin-bottom: 0;
    line-height: 1;
    background: #F8F9FA;
    display: grid;
    grid-template-rows: 1fr;
    gap: 0 0;
    grid-template-columns: 1.5rem auto;
    grid-template-areas: "icon text"
}
/* ... */

